force-app/main/default/objects/CRMfusionDBR101__Exception__e/CRMfusionDBR101__Exception__e.object-meta.xml
<CustomObject>
    <label>Exception</label>
    <pluralLabel>Exceptions</pluralLabel>
</CustomObject>