force-app/main/default/objects/CRMfusionDBR101__Exception__e/fields/CRMfusionDBR101__Exception__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Exception__c</fullName>
    <label>Exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>