force-app/main/default/objects/CRMfusionDBR101__Exception__e/fields/CRMfusionDBR101__Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Record_Ids__c</fullName>
    <description>Triggering record ids, if any.</description>
    <label>Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>