force-app/main/default/objects/CRMfusionDBR101__Exception__e/fields/CRMfusionDBR101__Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Trigger_Type__c</fullName>
    <description>Trigger type - update, insert, delete, undelete or n/a if not a trigger</description>
    <label>Trigger Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>